// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ZipCodeField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <label
        for="text_zip"
      >
        Kod pocztowy
      </label>
      <input
        class="sc-kEqYlL jzZEFj"
        id="testId"
        label="Kod pocztowy"
        name="text_zip"
        placeholder="Kod pocztowy"
        value="50600"
      />
      <span
        class="sc-jrsJCI djVSvf"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;

exports[`<ZipCodeField/> matches snapshot 1`] = `
<input
  class="sc-kEqYlL honwIS"
  id="testId"
  label="Kod pocztowy"
  name="text_zip"
  placeholder="Kod pocztowy"
  value=""
/>
`;

exports[`<ZipCodeField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE gQzhKx"
    id="testForm"
  >
    <div
      class="sc-fujyUd gdvYxl"
    >
      <label
        for="text_zip"
      >
        ZipCode
      </label>
      <input
        class="sc-kEqYlL honwIS"
        id="testId"
        label="ZipCode"
        name="text_zip"
        placeholder="Kod pocztowy"
        value=""
      />
    </div>
  </form>
</div>
`;
